[gd_scene load_steps=29 format=3 uid="uid://btqjkledff1qw"]

[ext_resource type="Theme" uid="uid://8oe8akinpd2h" path="res://UI/UI_default.tres" id="1_ec8bo"]
[ext_resource type="Texture2D" uid="uid://s6pwjakybwcv" path="res://UI/menu_back.png" id="2_tk5uo"]
[ext_resource type="Texture2D" uid="uid://06jtoeq6psjt" path="res://UI/menu.png" id="3_5832q"]
[ext_resource type="Script" path="res://UI/MoveWithMouse.gd" id="3_a2n3q"]
[ext_resource type="Script" path="res://MouseToShader.gd" id="4_2l5lw"]
[ext_resource type="Script" path="res://UI/Quit.gd" id="5_gqjru"]
[ext_resource type="Script" path="res://UI/AutoPlay.gd" id="6_y15v0"]
[ext_resource type="Environment" uid="uid://dmbd6a6ueyg62" path="res://main.tres" id="7_fomd3"]
[ext_resource type="Texture2D" uid="uid://d0fdpw52v7uf5" path="res://UI/icarus_wings.png" id="8_63gy2"]
[ext_resource type="Shader" path="res://swap_color.gdshader" id="8_sexuj"]
[ext_resource type="Texture2D" uid="uid://c5jxxtp0an06n" path="res://Npc/npc_grad.png" id="9_f0iox"]
[ext_resource type="Script" path="res://SaveManager.gd" id="11_gi308"]
[ext_resource type="Script" path="res://Maps/SceneSwitcher.gd" id="12_nr8ri"]
[ext_resource type="PackedScene" uid="uid://brykcx14bc8xc" path="res://Maps/prologue.tscn" id="13_beyai"]
[ext_resource type="PackedScene" uid="uid://cnqpiju56w2xv" path="res://main.tscn" id="14_cqdg4"]
[ext_resource type="Script" path="res://UI/SaveFileCreator.gd" id="16_nj4jb"]
[ext_resource type="PackedScene" uid="uid://0g5pi62i4b46" path="res://UI/save_file_btn.tscn" id="17_ugl0r"]
[ext_resource type="AudioStream" uid="uid://dfeytvk01mkxc" path="res://Audio/Melancholy Ambience.wav" id="18_0bm8u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pxi63"]
atlas = ExtResource("3_5832q")
region = Rect2(0, 0, 228, 128)

[sub_resource type="Animation" id="Animation_6foib"]
resource_name = "Play"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.603922), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect/TextureRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 9), Vector2(-782, -175)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect/TextureRect2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SaveManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"load_game"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect/TextureRect2:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(608, 342)]
}

[sub_resource type="Animation" id="Animation_sxb87"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 228, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel/TextureRect:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 32, 32, 32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel/TextureRect2:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 32, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(212, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect/TextureRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TextureRect/TextureRect2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 9)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TextureRect/TextureRect2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TextureRect/TextureRect2:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(608, 342), Vector2(608, 342)]
}

[sub_resource type="Animation" id="Animation_l3qvb"]
resource_name = "menu"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 228, 128), Rect2(228, 0, 228, 128), Rect2(456, 0, 228, 128), Rect2(684, 0, 228, 128), Rect2(912, 0, 228, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel/TextureRect:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 32, 32, 32), Rect2(32, 32, 32, 32), Rect2(64, 32, 32, 32), Rect2(32, 32, 32, 32), Rect2(0, 32, 32, 32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel/TextureRect2:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 32, 32), Rect2(32, 0, 32, 32), Rect2(64, 0, 32, 32), Rect2(32, 0, 32, 32), Rect2(0, 0, 32, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(212, 0), Vector2(212, -1.25), Vector2(212, -2.5), Vector2(212, -1.25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect/TextureRect2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TextureRect/TextureRect2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 9)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TextureRect/TextureRect2:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(608, 342)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_awvyj"]
_data = {
"Play": SubResource("Animation_6foib"),
"RESET": SubResource("Animation_sxb87"),
"menu": SubResource("Animation_l3qvb")
}

[sub_resource type="Gradient" id="Gradient_ealyn"]
interpolation_mode = 1
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.0555556, 0.111111, 0.166667, 0.222222, 0.277778, 0.333333, 0.388889, 0.444444, 0.5, 0.555556, 0.611111, 0.666667, 0.666667, 0.722222, 0.777778, 0.833333, 0.888889, 0.944444)
colors = PackedColorArray(0, 0, 0, 0, 0.520472, 0.472756, 0.588989, 1, 0.707562, 0.678349, 0.811552, 1, 0.649284, 0.597254, 0.701893, 1, 0.733005, 0.733005, 0.733005, 1, 0.14, 0.14, 0.14, 1, 0.341176, 0.341176, 0.341176, 1, 0.2, 0.121569, 0.0980392, 1, 0.239216, 0.14902, 0.117647, 1, 0.301961, 0.184314, 0.145098, 1, 0.48, 0.48, 0.48, 1, 0.229952, 0.21663, 0.209969, 1, 0.2, 0.188, 0.182, 1, 0.605274, 0.605274, 0.605274, 1, 0.137255, 0.6, 0.352941, 1, 0.14902, 0.658824, 0.388235, 1, 0.0705882, 0.0470588, 0.0431373, 1, 0.0705882, 0.0470588, 0.0352941, 1, 0.101961, 0.0784314, 0.0666667, 1)
metadata/_snap_count = 18
metadata/_snap_enabled = true

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1nnyh"]
gradient = SubResource("Gradient_ealyn")
width = 18

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30cpr"]
shader = ExtResource("8_sexuj")
shader_parameter/alpha_override = 1.0
shader_parameter/num_colors = 18
shader_parameter/precision = 0.0
shader_parameter/index = null
shader_parameter/palette_in = ExtResource("9_f0iox")
shader_parameter/palette_out = SubResource("GradientTexture1D_1nnyh")

[sub_resource type="AtlasTexture" id="AtlasTexture_k7aib"]
atlas = ExtResource("8_63gy2")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40mc3"]
atlas = ExtResource("8_63gy2")
region = Rect2(0, 0, 32, 32)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ec8bo")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.843137, 0.843137, 0.843137, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_pxi63")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 0.975
anchor_bottom = 0.975
offset_left = 16.0
offset_top = 9.0
offset_right = 624.0
offset_bottom = 351.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tk5uo")
stretch_mode = 4
script = ExtResource("3_a2n3q")
offset_x_range = Vector2(9, 17)
offset_y_range = Vector2(17, 9)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMenu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Start" type="Button" parent="CenterContainer/StartMenu"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="CenterContainer/StartMenu"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer/StartMenu"]
layout_mode = 2
text = "Quit"
script = ExtResource("5_gqjru")

[node name="SaveFiles" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 45

[node name="New_Game" type="Button" parent="CenterContainer/SaveFiles"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "New game"

[node name="Files" type="HBoxContainer" parent="CenterContainer/SaveFiles"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 22
alignment = 1

[node name="Back" type="Button" parent="CenterContainer/SaveFiles"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Node2D" type="Node2D" parent="." node_paths=PackedStringArray("mat_nodes")]
script = ExtResource("4_2l5lw")
mat_nodes = [NodePath("../TextureRect/TextureRect2")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_awvyj")
}
script = ExtResource("6_y15v0")
anim = "menu"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("7_fomd3")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 212.0
offset_right = 428.0
offset_bottom = 64.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][font_size=32]
Light Unseen[/font_size][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="RichTextLabel"]
material = SubResource("ShaderMaterial_30cpr")
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -34.0
offset_right = 13.0
offset_bottom = 6.0
grow_vertical = 0
texture = SubResource("AtlasTexture_k7aib")

[node name="TextureRect2" type="TextureRect" parent="RichTextLabel"]
material = SubResource("ShaderMaterial_30cpr")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -31.0
offset_right = 23.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("AtlasTexture_40mc3")

[node name="SaveManager" type="Node2D" parent="."]
script = ExtResource("11_gi308")

[node name="To_Prologue" type="Node2D" parent="." node_paths=PackedStringArray("protected_nodes")]
script = ExtResource("12_nr8ri")
scene = ExtResource("13_beyai")
protected_nodes = [NodePath("../SaveManager")]

[node name="To_Main" type="Node2D" parent="." node_paths=PackedStringArray("protected_nodes")]
script = ExtResource("12_nr8ri")
scene = ExtResource("14_cqdg4")
protected_nodes = [NodePath("../SaveManager")]

[node name="SaveFileCreator" type="Node2D" parent="." node_paths=PackedStringArray("save_file_parent", "start_menu", "saveManager", "animPlayer")]
script = ExtResource("16_nj4jb")
save_file_parent = NodePath("../CenterContainer/SaveFiles/Files")
start_menu = NodePath("../CenterContainer/StartMenu")
saveManager = NodePath("../SaveManager")
save_file_btn = ExtResource("17_ugl0r")
animPlayer = NodePath("../AnimationPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_0bm8u")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CenterContainer/StartMenu/Start" to="SaveFileCreator" method="show_save_files"]
[connection signal="pressed" from="CenterContainer/StartMenu/Quit" to="CenterContainer/StartMenu/Quit" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/SaveFiles/New_Game" to="SaveFileCreator" method="create_empty_save"]
[connection signal="pressed" from="CenterContainer/SaveFiles/Back" to="SaveFileCreator" method="hide_save_files"]
